--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,14 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo "Installing dependencies..."
+      - apt-get update
+      - apt-get install -y docker
+      - curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      - chmod +x /usr/local/bin/docker-compose
+
   pre_build:
     commands:
       - echo "Cloning the repository..."
