--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,5 +13,5 @@ phases:
 artifacts:
   files:
     - '**/*'  # Include all files, or you can specify particular files or directories
-  base-directory: 'node-todo-cicd'  # This ensures artifacts are gathered from the right directory
+  base-directory: 'node-app'  # This ensures artifacts are gathered from the right directory
   discard-paths: yes  # You can set this to 'no' if you want to preserve the file paths in the S3 bucket
