--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo "Building Docker image"
-      - docker build -t "$DOCKER_RESGISTRY_URL/$DOCKER_RESGISTRY_USERNAME/node-app:latest" .
+      - docker build -t "$DOCKER_RESGISTRY_USERNAME/node-app:latest" .
       - docker login -u "$DOCKER_RESGISTRY_USERNAME" -p "$DOCKER_RESGISTRY_PASSWORD"
       - docker push "$DOCKER_RESGISTRY_URL/$DOCKER_RESGISTRY_USERNAME/node-app:latest" 
       
