--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 
 env:
   parameter_store:
-    DOCKER_RESGISTRY_USERNAME: /docker/username
-    DOCKER_RESGISTRY_PASSWORD: /docker/password
-    DOCKER_RESGISTRY_URL: /docker-registry/url
+    DOCKER_REGISTRY_USERNAME: /docker/username
+    DOCKER_REGISTRY_PASSWORD: /docker/password
+    DOCKER_REGISTRY_URL: /docker-registry/url
 
 phases:
   pre_build:
@@ -14,9 +14,9 @@ phases:
   build:
     commands:
       - echo "Building Docker image"
-      - docker build -t "$DOCKER_RESGISTRY_USERNAME/node-app:latest" .
-      - docker login -u "$DOCKER_RESGISTRY_USERNAME" -p "$DOCKER_RESGISTRY_PASSWORD"
-      - docker push "$DOCKER_RESGISTRY_URL/$DOCKER_RESGISTRY_USERNAME/node-app:latest" 
+      - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/node-app:latest" .
+      - docker login -u "$DOCKER_REGISTRY_USERNAME" -p "$DOCKER_REGISTRY_PASSWORD"
+      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/node-app:latest" 
       
 
 artifacts:
