--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo "Logging into Docker registry"
-      - docker login -u "$DOCKER_REGISTRY_USERNAME" -p "$DOCKER_REGISTRY_PASSWORD"
+      - docker login -u "$DOCKER_REGISTRY_USERNAME" -p --password-stdin
 
   build:
     commands:
