--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo "Logging into Docker registry"
-      - echo "Username: $DOCKER_REGISTRY_USERNAME"  # Be careful with this in production
+   #   - echo "Username: $DOCKER_REGISTRY_USERNAME"  # Be careful with this in production
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login "$DOCKER_REGISTRY_URL" -u "$DOCKER_REGISTRY_USERNAME" --password-stdin
 
   build:
