--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo "Logging into Docker registry"
    #   - echo "Username: $DOCKER_REGISTRY_USERNAME"  # Be careful with this in production
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login "$DOCKER_REGISTRY_URL" -u "$DOCKER_REGISTRY_USERNAME" --password-stdin
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login "$DOCKER_REGISTRY_URL" --username --password-stdin
 
   build:
     commands:
